# RcppMLPACK1

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog.txt  DESCRIPTION  NAMESPACE  README.md  RcppMLPACK.Rmd  RcppMLPACK.md  cleanup  configure  configure.ac  log.txt  timer.txt
R/: .Rhistory  RcppMLPACK.package.skeleton.R  flags.R  fun.R  inline.R  kmeans.R
inst/include/: RcppMLPACK.h
inst/include/mlpack/: core.hpp
inst/skeleton/: Makevars  Makevars.win  kmeans.cpp
inst/skl/: RcppMLPACK.h  kmeans.cpp
man/: RcppMLPACK-package.Rd  RcppMLPACK.package.skeleton.Rd  kmeans.Rd  mlKmeans.Rd  mlRidge.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  RcppMLPACK.h  init.c  kmeans.cpp  log.txt  mlpca.cpp  ridge_regression.cpp  symbols.rds
src/mlpack/: core.hpp
src/mlpack/core/arma_extend/: arma_extend.hpp  glue_ccov_meat.hpp
src/mlpack/core/data/: load.hpp  load_impl.hpp  normalize_labels.hpp  normalize_labels_impl.hpp  save.hpp  save_impl.hpp
src/mlpack/core/dists/: discrete_distribution.cpp  discrete_distribution.hpp  gaussian_distribution.cpp
src/mlpack/core/kernels/: cosine_distance.hpp  cosine_distance_impl.hpp  epanechnikov_kernel_impl.hpp  example_kernel.hpp  laplacian_kernel.hpp  linear_kernel.hpp  pspectrum_string_kernel.cpp  spherical_kernel.hpp
src/mlpack/core/math/: clamp.hpp  lin_alg.cpp  lin_alg.hpp  random.cpp  random.hpp  range.hpp  range_impl.hpp
src/mlpack/core/metrics/: ip_metric.hpp  lmetric.hpp  lmetric_impl.hpp  mahalanobis_distance.hpp  (+1 more)
vignettes/: RcppMLPACK-intro.Rnw  RcppMLPACK-intro.Rnw~  RcppMLPACK.Rnw  ref.bib
(+257 files in other folders)
